--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -1,4 +1,4 @@
-name: Kubespray K8s - Idempotent
+name: Kubespray K8s - Idempotent (Your Structure)
 
 on:
   workflow_dispatch:
@@ -22,17 +22,15 @@ jobs:
           version: 1.94.1
           authkey: ${{ secrets.TAILSCALE_AUTH_KEY }}
 
-      - name: Setup K8s with Kubespray (Idempotent)
+      - name: Pre-flight Port Check & Cleanup
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.PROXMOX_VM_TAILSCALE_IP }}
           username: ${{ secrets.FIRST_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          script_stop_on_error: true
           script: |
             set -e
-
-            # 포트 점유 확인
+            
             echo "🔍 Checking port occupation..."
             OCCUPIED_PORTS=""
             for port in 6443 2379 10250; do
@@ -53,12 +51,24 @@ jobs:
               echo "✅ All ports free"
             fi
 
+      - name: Setup K8s with Kubespray (Idempotent)
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.PROXMOX_VM_TAILSCALE_IP }}
+          username: ${{ secrets.FIRST_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script_stop_on_error: true
+          script: |
             set -euo pipefail
             
             KUBE_VERSION="1.31.6"
             KUBESPRAY_VERSION="v2.29.0"
             KUBESPRAY_HOME="/opt/kubespray"
             VENV_PATH="/opt/venv-kubespray"
+            
+            # Secrets 변수 할당
+            HOST_IP="${{ secrets.HOST_IP }}"
+            USERNAME="${{ secrets.USERNAME }}"
             
             echo "════════════════════════════════════"
             echo "🔄 Kubespray Idempotent Setup"
@@ -78,7 +88,6 @@ jobs:
                 return 1
               fi
               
-              # 모든 노드가 Ready 상태인가?
               READY_NODES=$(kubectl get nodes --no-headers 2>/dev/null | grep -c " Ready " || echo 0)
               TOTAL_NODES=$(kubectl get nodes --no-headers 2>/dev/null | wc -l || echo 0)
               
@@ -90,7 +99,7 @@ jobs:
             
             if check_cluster_health; then
               echo "✅ Kubernetes cluster is healthy"
-              echo "   $(kubectl version --short 2>/dev/null || echo 'kubectl available')"
+              kubectl version --short 2>/dev/null || echo "kubectl available"
               echo "   Nodes: $(kubectl get nodes -o jsonpath='{.items[*].metadata.name}' 2>/dev/null)"
               exit 0
             fi
@@ -99,7 +108,7 @@ jobs:
             echo "   Proceeding with Kubespray..."
             
             # ============================================
-            # 2️⃣ 환경 준비 (멱등성: 이미 있으면 스킵)
+            # 2️⃣ 환경 준비
             # ============================================
             echo ""
             echo "📦 Installing dependencies..."
@@ -109,12 +118,11 @@ jobs:
               2>&1 | grep -v "^Processing triggers\|^done\.$" || true
             
             # ============================================
-            # 3️⃣ Kubespray 준비 (멱등성 구현)
+            # 3️⃣ Kubespray 준비 (멱등성)
             # ============================================
             echo ""
             echo "📥 Setting up Kubespray..."
             
-            # 이미 존재하고 올바른 버전이면 스킵
             if [ -d "$KUBESPRAY_HOME/.git" ]; then
               CURRENT_VERSION=$(cd "$KUBESPRAY_HOME" && git describe --tags 2>/dev/null || echo "unknown")
               if [ "$CURRENT_VERSION" = "$KUBESPRAY_VERSION" ]; then
@@ -135,7 +143,7 @@ jobs:
             fi
             
             # ============================================
-            # 4️⃣ Python 가상환경 (멱등성: 이미 있으면 재사용)
+            # 4️⃣ Python 가상환경
             # ============================================
             echo ""
             echo "🐍 Setting up Python environment..."
@@ -152,76 +160,72 @@ jobs:
             pip install -q -r "$KUBESPRAY_HOME/requirements.txt"
             
             # ============================================
-            # 5️⃣ Ansible 인벤토리 설정
+            # 5️⃣ Ansible 인벤토리 설정 (당신의 구조 유지)
             # ============================================
             echo ""
             echo "📋 Configuring Ansible inventory..."
             
             INVENTORY_DIR="$KUBESPRAY_HOME/inventory/mycluster"
             
-            # 이미 있으면 백업
             if [ -d "$INVENTORY_DIR" ]; then
               BACKUP_DIR="$KUBESPRAY_HOME/inventory/mycluster.backup.$(date +%s)"
               cp -r "$INVENTORY_DIR" "$BACKUP_DIR"
-              echo "   ✅ Backed up existing inventory to $BACKUP_DIR"
+              echo "   ✅ Backed up existing inventory"
             fi
             
             mkdir -p "$INVENTORY_DIR/group_vars/all"
             
-            # hosts.yaml 생성 (멱등성: 내용이 같으면 덮어쓰기 OK)
+            # hosts.yaml - 당신의 Secrets 값 사용
             cat > "$INVENTORY_DIR/hosts.yaml" <<'HOSTS'
             all:
               hosts:
-                ${{ secrets.USERNAME }}:
+                $USERNAME:
                   ansible_connection: local
                   ansible_host: 127.0.0.1
-                  ip: "{{ ansible_host }}"
-                  access_ip: "{{ ansible_host }}"
+                  ip: $HOST_IP
+                  access_ip: $HOST_IP
               children:
                 kube_control_plane:
                   hosts:
-                    ${{ secrets.USERNAME }}:
+                    $USERNAME:
                 kube_node:
                   hosts:
-                    ${{ secrets.USERNAME }}:
+                    $USERNAME:
                 etcd:
                   hosts:
-                    ${{ secrets.USERNAME }}:
+                    $USERNAME:
                 k8s_cluster:
                   children:
                     kube_control_plane:
                     kube_node:
             HOSTS
             
-            # all.yml 생성 (멱등성: 변경사항만 적용)
+            # hosts.yaml에서 변수 치환
+            sed -i "s|\$USERNAME|$USERNAME|g" "$INVENTORY_DIR/hosts.yaml"
+            sed -i "s|\$HOST_IP|$HOST_IP|g" "$INVENTORY_DIR/hosts.yaml"
+            
+            # all.yml - 당신의 Secrets 값 사용
             cat > "$INVENTORY_DIR/group_vars/all/all.yml" <<'VARS'
-            ---
-            # Kubernetes
-            kube_version: 1.31.6
+            kube_version: $KUBE_VERSION
             container_manager: containerd
             dns_mode: coredns
-            
-            # Network
             kube_pods_subnet: 10.244.0.0/16
             kube_service_addresses: 10.96.0.0/12
-            kube_apiserver_advertise_address: "127.0.0.1"
-            kube_apiserver_bind_address: "0.0.0.0"
-            
-            # Kubelet
+            kube_apiserver_advertise_address: $HOST_IP
+            kube_apiserver_bind_address: 0.0.0.0
             kubelet_deployment_type: host
-            
-            # Timeouts
             kubeadm_init_timeout: 600
             upgrade_cluster_setup_timeout: 600
-            
-            # Skip unnecessary checks for single-node
             skip_kubelet_systemd_environment_file_checks: true
             VARS
+            
+            # all.yml에서 변수 치환
+            sed -i "s|\$HOST_IP|$HOST_IP|g" "$INVENTORY_DIR/group_vars/all/all.yml"
             
             echo "   ✅ Inventory configured"
             
             # ============================================
-            # 6️⃣ Kubespray 실행 (멱등성 핵심)
+            # 6️⃣ Kubespray 실행 (멱등성)
             # ============================================
             echo ""
             echo "🚀 Running Kubespray (idempotent)..."
@@ -229,8 +233,6 @@ jobs:
             
             cd "$KUBESPRAY_HOME"
             
-            # Kubespray는 멱등성을 위해 설계됨
-            # 이미 초기화된 부분은 스킵하고 필요한 부분만 업데이트
             ansible-playbook \
               -i "$INVENTORY_DIR/hosts.yaml" \
               --become \
@@ -246,17 +248,17 @@ jobs:
             echo "✅ Kubespray completed"
             
             # ============================================
-            # 7️⃣ kubeconfig 설정 (멱등성: 이미 있으면 스킵)
+            # 7️⃣ kubeconfig 설정 (당신의 USERNAME 사용)
             # ============================================
             echo ""
             echo "🔑 Setting up kubeconfig..."
             
-            KUBECONFIG_PATH="/home/${{ secrets.FIRST_USERNAME }}/.kube/config"
+            KUBECONFIG_PATH="/home/$USERNAME/.kube/config"
             
             if [ ! -f "$KUBECONFIG_PATH" ]; then
-              mkdir -p "$(dirname "$KUBECONFIG_PATH")"
+              sudo mkdir -p "$(dirname "$KUBECONFIG_PATH")"
               sudo cp /etc/kubernetes/admin.conf "$KUBECONFIG_PATH"
-              sudo chown "${{ secrets.FIRST_USERNAME }}:${{ secrets.FIRST_USERNAME }}" "$KUBECONFIG_PATH"
+              sudo chown -R "$USERNAME:$USERNAME" "$KUBECONFIG_PATH"
               sudo chmod 600 "$KUBECONFIG_PATH"
               echo "   ✅ Created kubeconfig"
             else
@@ -264,24 +266,29 @@ jobs:
             fi
             
             # ============================================
-            # 8️⃣ 최종 검증
+            # 8️⃣ Shell 수정 (당신의 USERNAME 사용)
+            # ============================================
+            echo ""
+            echo "🔧 Fixing shell configuration..."
+            sudo usermod -s /bin/bash "$USERNAME" || true
+            echo "   ✅ Shell fixed"
+            
+            # ============================================
+            # 9️⃣ 최종 검증
             # ============================================
             echo ""
             echo "✓ Verifying cluster..."
             
             export KUBECONFIG="$KUBECONFIG_PATH"
             
-            # kubectl 설정 확인
             if ! kubectl cluster-info &>/dev/null; then
               echo "❌ Cluster info check failed"
               exit 1
             fi
             
-            # 노드 상태 확인
             echo "   Nodes:"
             kubectl get nodes -o wide
             
-            # 주요 포드 확인
             echo ""
             echo "   System pods:"
             kubectl get pods -n kube-system --no-headers | head -5
