--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -215,6 +215,15 @@ jobs:
             upgrade_cluster_setup_timeout: 600
             skip_kubelet_systemd_environment_file_checks: true
 
+            # ✅ 표준 DNS 설정
+            kubelet_extra_args: "--cluster-dns=10.96.0.10"
+            kube_dns_servers:
+              - 10.96.0.10
+
+            # ✅ containerd SystemdCgroup 설정
+            containerd_cgroup_driver: systemd
+            kubelet_cgroup_driver: systemd
+
             # 인증서 주체명 설정 (재생성 방지)
             apiserver_cert_extra_sans:
               - "localhost"
