kubeconfig server addreess

--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -180,7 +180,7 @@ jobs:
             dns_mode: coredns
             kube_pods_subnet: 10.244.0.0/16
             kube_service_addresses: 10.96.0.0/12
-            kube_apiserver_advertise_address: 127.0.0.1
+            kube_apiserver_advertise_address: $HOST_IP
             kube_apiserver_bind_address: "0.0.0.0"
             kubelet_deployment_type: host
             kubeadm_init_timeout: 600
