--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -22,6 +22,35 @@ jobs:
           authkey: ${{ secrets.TAILSCALE_AUTH_KEY }}
 
 
+      - name: Cleanup K8s
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.PROXMOX_VM_TAILSCALE_IP }}
+          username: ${{ secrets.FIRST_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            set -e
+            
+            echo "🧹 Cleaning up for idempotent deployment..."
+            
+            # 1. kubeadm 리셋
+            sudo kubeadm reset --force 2>/dev/null || true
+            
+            # 2. kubernetes 설정 삭제
+            sudo rm -rf /etc/kubernetes
+            
+            # 3. Kubespray 캐시 삭제
+            rm -rf /opt/kubespray/.cache
+            rm -rf /opt/kubespray
+            
+            # 4. 포트 정리
+            sudo fuser -k -9 6443/tcp 2379/tcp 10250/tcp 10259/tcp 10257/tcp 8080/tcp 2>/dev/null || true
+            
+            sleep 3
+            
+            echo "✅ Cleanup complete"
+
+
       - name: Setup K8s with Kubespray
         uses: appleboy/ssh-action@master
         with:
