--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -21,6 +21,7 @@ jobs:
           version: 1.94.1
           authkey: ${{ secrets.TAILSCALE_AUTH_KEY }}
 
+
       - name: Cleanup K8s
         uses: appleboy/ssh-action@master
         with:
@@ -29,32 +30,38 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             set -e
-      
+            
             echo "🧹 Cleaning up for idempotent deployment..."
             
-            # 1. kubeadm 리셋
-            sudo kubeadm reset --force 2>/dev/null || true
-
-            # 2. kubernetes 설정 삭제
-            sudo rm -rf /etc/kubernetes
-
-            # 3. kubeconfig 삭제
-            rm -rf ~/.kube/config
-
-            # 4. kubelet & containerd 중단
+            # kubelet & containerd 중단 (우선)
             sudo systemctl stop kubelet 2>/dev/null || true
             sudo systemctl stop containerd 2>/dev/null || true
-
-            # 5. Kubespray 캐시 삭제
+            
+            # 프로세스 강제 종료
+            sudo killall -9 kubelet 2>/dev/null || true
+            sudo killall -9 containerd 2>/dev/null || true
+            
+            # kubeadm 리셋
+            sudo kubeadm reset --force 2>/dev/null || true
+            
+            # kubernetes 설정 삭제
+            sudo rm -rf /etc/kubernetes
+            sudo rm -rf /var/lib/kubelet
+            
+            # kubeconfig 삭제
+            rm -rf ~/.kube/config
+            
+            # Kubespray 캐시 삭제
             rm -rf /opt/kubespray/.cache
             rm -rf /opt/kubespray
-
-            # 6. 포트 정리
+            
+            # 포트 정리 (더 강하게)
             sudo fuser -k -9 6443/tcp 2379/tcp 10250/tcp 10259/tcp 10257/tcp 8080/tcp 2379/tcp 2380/tcp 2>/dev/null || true
-
-            sleep 3
-
+            
+            sleep 5
+            
             echo "✅ Cleanup complete"
+            
 
       - name: Setup K8s with Kubespray
         uses: appleboy/ssh-action@master
